// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VotingDialog should match the snapshot with active voting 1`] = `
<div
  class="portal portal--darkBackground"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              VoteConfigurationButton.label
            </h2>
            <button
              class="voting-dialog__start-button"
              data-testid="voting-dialog__cancel-button"
            >
              <label>
                VoteConfigurationButton.cancelVoting
              </label>
            </button>
            <button
              class="voting-dialog__start-button"
              data-testid="voting-dialog__stop-button"
            >
              <label>
                VoteConfigurationButton.stopVoting
              </label>
            </button>
            <button
              class="dialog__close-button"
              data-testid="dialog__close-button"
            >
              <svg
                class="close-button__icon"
              >
                icon-close.svg
              </svg>
            </button>
          </article>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`VotingDialog should match the snapshot with no active voting 1`] = `
<div
  class="portal portal--darkBackground"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              VoteConfigurationButton.label
            </h2>
            <button
              class="dialog__button"
              data-testid="voting-dialog__cumulative-voting-button"
            >
              <label>
                VoteConfigurationButton.allowMultipleVotesPerNote
              </label>
              <div
                class="toggle voting-dialog__toggle"
              />
            </button>
            <button
              class="dialog__button"
              data-testid="voting-dialog__anonymous-voting-button"
            >
              <label>
                VoteConfigurationButton.showVotesOfOthers
              </label>
              <div
                class="toggle voting-dialog__toggle"
              />
            </button>
            <div
              class="dialog__button"
            >
              <label>
                VoteConfigurationButton.numberOfVotes
              </label>
              <button
                class="voting-dialog__vote-button"
                data-testid="voting-dialog__minus-button"
              >
                <svg>
                  icon-minus.svg
                </svg>
              </button>
              <label
                class="voting-dialog__vote-label"
              >
                5
              </label>
              <button
                class="voting-dialog__vote-button"
                data-testid="voting-dialog__plus-button"
              >
                <svg>
                  icon-plus.svg
                </svg>
              </button>
            </div>
            <button
              class="voting-dialog__start-button"
              data-testid="voting-dialog__start-button"
            >
              <label>
                VoteConfigurationButton.startVoting
              </label>
            </button>
            <button
              class="dialog__close-button"
              data-testid="dialog__close-button"
            >
              <svg
                class="close-button__icon"
              >
                icon-close.svg
              </svg>
            </button>
          </article>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
